tests/baselines/reference/assignFromNumberInterface2.errors.txt
tests/cases/conformance/types/primitives/number/assignFromNumberInterface2.ts(23,1): error TS2323: Type 'Number' is not assignable to type 'number'.
tests/cases/conformance/types/primitives/number/assignFromNumberInterface2.ts(24,1): error TS2323: Type 'NotNumber' is not assignable to type 'number'.


==== tests/cases/conformance/types/primitives/number/assignFromNumberInterface2.ts (2 errors) ====
    interface Number {
        doStuff(): string;
    }
    
    interface NotNumber {
        toString(radix?: number): string;
        toFixed(fractionDigits?: number): string;
        toExponential(fractionDigits?: number): string;
        toPrecision(precision?: number): string;
        doStuff(): string;
    }
    
    var x = 1;
    var a: Number;
    var b: NotNumber;
    
    a = x; 
    a = b; 
    
    b = a; 
    b = x; 
    
    x = a; // expected error
    ~
!!! error TS2323: Type 'Number' is not assignable to type 'number'.
    x = b; // expected error
    ~
!!! error TS2323: Type 'NotNumber' is not assignable to type 'number'.
    
    